# lightship-dbp

./: .gitignore  CMakeLists.txt  README.md  VisualStudioUserFile.vcproj.user.in  VisualStudioUserFile.vcxproj.user.in  lightship_version  out.val  toolchain-i386-pc-mingw32.cmake  valgrind-linux-tests.sh  valgrind-linux.sh
cross-compile/: CMakeLists.txt  cross-gentoo-x86_64-pc-linux-gnu-twilight.sh  install-arch.cmake.in
cross-compile/cmake/: toolchain-arch.cmake.in
framework/: CMakeLists.txt
framework/include/framework/: config.h.in  event_api.h  events.h  game.h  glob.h  log.h  main_loop.h  plugin.h  plugin_api.h  plugin_manager.h  se_api.h  service_api.h  services.h
framework/src/: events.c  game.c  glob.c  log.c  main_loop.c  plugin.c  plugin_manager.c  se_api.c  services.c
lightship/: CMakeLists.txt
lightship/cfg/: core-plugins.yml  entry-point.yml  settings.yml  settings_d.yml
lightship/include/lightship/: .linked_list.h.kate-swp  api.h  argv.h  callback.h  config.h.in  events.h  init.h  lightship.h  linked_list.h  module_loader.h  plugin.h  plugin_manager.h  services.h  thread_test.h  utility.h  vector.h
lightship/python/: Main.py
lightship/src/: api.c  argv.c  callback.c  events.c  init.c  linked_list.c  main.c  plugin.c  plugin_manager.c  services.c  thread_test.c  utility.c  vector.c
plugins/core/: CMakeLists.txt
plugins/core/d_example/: CMakeLists.txt
plugins/core/d_example/src/: api.d  d_example.d
plugins/core/input/: CMakeLists.txt
plugins/core/input/include/: plugin_input.h
plugins/core/input/src/: context.c  events.c  glob.c  input.c  keyboard.c  mouse.c  plugin_input.c  services.c
plugins/core/input_glfw/: CMakeLists.txt
plugins/core/input_glfw/src/: input_glfw.c
plugins/core/main_loop/: CMakeLists.txt
plugins/core/main_loop/include/: plugin_main_loop.h
plugins/core/main_loop/src/: events.c  glob.c  main_loop.c  plugin.c  plugin_main_loop.c  services.c
plugins/core/menu/: CMakeLists.txt
plugins/core/menu/cfg/: menu.yml
plugins/core/menu/include/: plugin_menu.h
plugins/core/menu/src/: button.c  context.c  element.c  events.c  glob.c  menu.c  plugin_menu.c  screen.c  screen_manager.c  services.c
plugins/core/python/: CMakeLists.txt
plugins/core/python/src/: context.c  events.c  glob.c  interpreter.c  lightship_module.c  lightship_module_exceptions.c  lightship_module_game.c  lightship_module_services.c  plugin_python.c  py_interp.c  services.c
plugins/core/renderer_gl/: CMakeLists.txt
plugins/core/renderer_gl/ext/: CMakeLists.txt
plugins/core/renderer_gl/fx/: line_2d.fsh  line_2d.vsh  sprite.fsh  sprite.vsh  text_2d.fsh  text_2d.vsh
plugins/core/renderer_gl/include/: plugin_renderer_gl.h
plugins/core/renderer_gl/src/: 2d.c  context.c  events.c  glob.c  glutils.c  image.c  input.c  plugin.c  plugin_renderer_gl.c  renderer_gl.c  services.c  shader.c  sprite.c  text.c  text_manager.c  text_wrapper.c  window.c
plugins/core/test/: CMakeLists.txt
plugins/core/test/src/: test.c
plugins/core/yaml/: CMakeLists.txt
plugins/core/yaml/ext/: CMakeLists.txt
plugins/core/yaml/include/: plugin_yaml.h
plugins/core/yaml/src/: events.c  glob.c  parser.c  plugin_yaml.c  services.c
plugins/plugin_manager/: CMakeLists.txt
plugins/plugin_manager/include/plugin_manager/: config.h.in  event_api.h  events.h  game.h  plugin.h  plugin_api.h  plugin_manager.h  service_api.h  services.h
plugins/plugin_manager/src/: events.c  game.c  plugin.c  plugin_manager.c  services.c
plugins/plugin_template/: CMakeLists.txt  CMakeLists.txt.in  config.h.in.in  context.c.in  context.h.in  events.c.in  events.h.in  glob.c.in  glob.h.in  plugin.c.in  plugin.h.in  services.c.in  services.h.in
tests/: CMakeLists.txt
tests/gmock/: CMakeLists.txt
tests/gmock/gtest/src/: gtest-internal-inl.h  gtest.cc
tests/gmock/src/: gmock_main.cc
tests/include/tests/: globals.hpp
tests/src/: environment_memory_management.cpp  test_events.cpp  test_map.cpp  test_ordered_vector.cpp  test_string.cpp  test_unordered_vector.cpp
tests/src/death/util/: test_dir_death.cpp  test_linked_list_death.cpp  test_map_death.cpp  test_ordered_vector_death.cpp  test_ptree_death.cpp  test_string_death.cpp  test_unordered_vector_death.cpp  test_yaml_death.cpp
tests/src/env/util/: environment_util_global.cpp
tests/src/framework/: test_events.cpp
tests/src/malloc/util/: test_dir_malloc.cpp  test_file_malloc.cpp  test_linked_list_malloc.cpp  test_map_malloc.cpp  test_memory_malloc.cpp  test_ordered_vector_malloc.cpp  test_ptree_malloc.cpp  test_string_malloc.cpp  test_unordered_vector_malloc.cpp  test_yaml_malloc.cpp
tests/src/misc/framework/: test_events.cpp  test_se_api.cpp  test_services.cpp  test_services_context.cpp  test_services_contextless.cpp
tests/src/misc/util/: test_bst_vector.cpp  (+11 more)
tests/src/util/: test_dir.cpp  test_dir_death.cpp  test_linked_list.cpp  test_map.cpp  test_memory.cpp  test_ordered_vector_death.cpp  test_ptree.cpp  test_string.cpp  test_string_death.cpp  test_yaml.cpp
tests/test_dir/files/: file_a.txt
util/: CMakeLists.txt
util/ext/yaml-0.1.5-cmake/: CMakeLists.txt
util/include/common/: export.h.in
util/include/thread_pool/: thread_pool.h
util/include/threadpool/: threadpool.h
util/include/util/: api.h  backtrace.h  bst_hashed_vector.h  bst_vector.h  bst_vector_common.h  config.h.in  dir.h  dynamic_call.h  event_api.h  events.h  file.h  game.h  hash.h  lightship_util.h  linked_list.h  log.h  macros.h  map.h  memory.h  module_loader.h  net.h  ordered_vector.h  plugin.h  plugin_api.h  pstdint.h  ptree.h  service_api.h  services.h  string.h  time.h  unordered_vector.h  util.h  vector.h  yaml.h
util/src/: events.c  game.c  hash.c  linked_list.c  log.c  map.c  memory.c  module_loader_linux.c  module_loader_win.c  ordered_vector.c  plugin.c  ptree.c  services.c  string.c  unordered_vector.c  util.c  vector.c
util/src/thread_pool/: thread_test.c
util/src/util/: bst_hashed_vector.c  bst_vector.c  dynamic_call.c  hash.c  linked_list.c  map.c  memory.c  ordered_vector.c  ptree.c  string.c  unordered_vector.c  yaml.c
(+235 files in other folders)
